--- a/GameShop/GameShop/Views/Home/Index.cshtml
+++ b/GameShop/GameShop/Views/Home/Index.cshtml
@@ -19,4 +19,6 @@
         <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
     </div>
 
+    <!-- Делаю что-нибудь :) -->
+
 </div>
