Немного поправил регистрацию

--- a/GameShop/GameShop/Views/Account/Login.cshtml
+++ b/GameShop/GameShop/Views/Account/Login.cshtml
@@ -3,7 +3,8 @@
 @{
     ViewBag.Title = "Вход в GameShop";
 }
-<h2>Вход в GameShop</h2>
+
+<h2>@Html.DisplayText("registrationSucceed") Вход в GameShop</h2>
 <form action="/Account/Login" method="POST">
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
