--- a/GameShop/GameShop/Views/Account/Register.cshtml
+++ b/GameShop/GameShop/Views/Account/Register.cshtml
@@ -42,8 +42,8 @@
             @Html.LabelFor(model => model.Email, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Email, new { htmlAttributes = new { @class = "form-control" } })
-                                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
-                                <span class="field-validation-valid text-danger">@Html.DisplayText("emailErrorMessage")</span>
+                @Html.ValidationMessageFor(model => model.Email, "", new { @class = "text-danger" })
+                <span class="field-validation-valid text-danger">@Html.DisplayText("emailExistsMessage")</span>
             </div>
         </div>
 
@@ -52,7 +52,7 @@
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Login, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.Login, "", new { @class = "text-danger" })
-                <span class="field-validation-valid text-danger">@Html.DisplayText("loginErrorMessage")</span>
+                <span class="field-validation-valid text-danger">@Html.DisplayText("loginExistsMessage")</span>
             </div>
         </div>
         <div class="form-group">
