--- a/GameShop/GameShop/Views/Account/Delete.cshtml
+++ b/GameShop/GameShop/Views/Account/Delete.cshtml
@@ -1,14 +1,13 @@
 ﻿@model GameShop.Models.Customer
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удалить аккаунт";
 }
 
-<h2>Delete</h2>
+<h2>Удалить аккаунт</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы действительно хотите сделать это?</h3>
 <div>
-    <h4>Customer</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -28,6 +27,14 @@
         </dd>
 
         <dt>
+            @Html.DisplayNameFor(model => model.Email)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Email)
+        </dd>
+
+        <dt>
             @Html.DisplayNameFor(model => model.Birthday)
         </dt>
 
@@ -43,14 +50,6 @@
             @Html.DisplayFor(model => model.Login)
         </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Email)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Email)
-        </dd>
-
     </dl>
 
     @using (Html.BeginForm()) {
@@ -58,7 +57,7 @@
 
         <div class="form-actions no-color">
             <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+            @Html.ActionLink("Вернуться в личный кабинет", "Profile")
         </div>
     }
 </div>
