--- a/GameShop/GameShop/Views/Account/Profile.cshtml
+++ b/GameShop/GameShop/Views/Account/Profile.cshtml
@@ -1,13 +1,12 @@
 ﻿@model GameShop.Models.Customer
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Личный кабинет";
 }
 
-<h2>Details</h2>
+<h2>Личный кабинет</h2>
 
 <div>
-    <h4>Customer</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -35,14 +34,6 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.Login)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Login)
-        </dd>
-
-        <dt>
             @Html.DisplayNameFor(model => model.Email)
         </dt>
 
@@ -50,9 +41,16 @@
             @Html.DisplayFor(model => model.Email)
         </dd>
 
+        <dt>
+            @Html.DisplayNameFor(model => model.Login)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.Login)
+        </dd>
+
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Редактировать мои данные", "Edit") | @Html.ActionLink("Удалить аккаунт", "Delete") 
 </p>
