Add "AddToCart" method and try to fix some bag with DB

--- a/GameShop/GameShop/Views/Shared/_Layout.cshtml
+++ b/GameShop/GameShop/Views/Shared/_Layout.cshtml
@@ -27,7 +27,8 @@
                     <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
                     <li>@Html.ActionLink("О программе", "About", "Home")</li>
                     <li>@Html.ActionLink("Контакт", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Тест работы с GitHub - добавил Балыбердин", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("Список игр", "Index", "Games")</li>
+                    <li>@Html.ActionLink("Категории", "Index", "Categories")</li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     @if (User.Identity.IsAuthenticated)
@@ -37,6 +38,7 @@
                         {
                             @Html.AntiForgeryToken()
                         }
+                        <li>@Html.ActionLink("Корзина", "Index", "Orders")</li>             //Пока просто для проверки
                         <li>@Html.ActionLink("Личный кабинет", "Profile", "Account")</li>
                         <li><a href="javascript:document.getElementById('logoutForm').submit()">Выйти (@User.Identity.Name)</a></li>
                     }
