Добавил возможность оставить отзыв к игре и оценку. Подсчет рейтинга игры на основе оценок пользователей

--- a/GameShop/GameShop/Views/Account/Login.cshtml
+++ b/GameShop/GameShop/Views/Account/Login.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Вход в GameShop";
 }
 
-<h2>@Html.DisplayText("registrationSucceed") Вход в GameShop</h2>
+<h2>@Html.DisplayText("registrationSuccess") Вход в GameShop</h2>
 <form action="/Account/Login" method="POST">
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
