--- a/GameShop/GameShop/Views/Games/Index.cshtml
+++ b/GameShop/GameShop/Views/Games/Index.cshtml
@@ -18,7 +18,7 @@
             @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Key)
+            @Html.DisplayNameFor(model => model.Rating)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Price)
@@ -35,10 +35,16 @@
             @Html.DisplayFor(modelItem => item.Category.Name)
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Name)
+            @Html.ActionLink(item.Name, "Details", new { id = item.Id })
         </td>
         <td>
-            @Html.DisplayFor(modelItem => item.Key)
+            @for (var i = 0; i < item.Rating ;i++)
+            {
+                @Html.Raw("&#9733");
+            }@for (var i = item.Rating; i < 10; i++)
+            {
+                @Html.Raw("&#9734");
+            }
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Price)
