--- a/GameShop/GameShop/Views/Games/Create.cshtml
+++ b/GameShop/GameShop/Views/Games/Create.cshtml
@@ -50,7 +50,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Description, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control" } })
+                @*@Html.EditorFor(model => model.Description, new { htmlAttributes = new { @class = "form-control"}})*@
+                <textarea class="form-control" rows="3" name="Description"></textarea>
                 @Html.ValidationMessageFor(model => model.Description, "", new { @class = "text-danger" })
             </div>
         </div>
