--- a/GameShop/GameShop/Views/Shared/_Layout.cshtml
+++ b/GameShop/GameShop/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         {
                             @Html.AntiForgeryToken()
                         }
-                        <li>@Html.ActionLink("Корзина", "Index", "Orders")</li>             //Пока просто для проверки
+                        <li>@Html.ActionLink("Корзина", "Cart", "Orders")</li>             //Пока просто для проверки
                         <li>@Html.ActionLink("Личный кабинет", "Profile", "Account")</li>
                         <li><a href="javascript:document.getElementById('logoutForm').submit()">Выйти (@User.Identity.Name)</a></li>
                     }
