--- a/GameShop/GameShop/Views/Games/Index.cshtml
+++ b/GameShop/GameShop/Views/Games/Index.cshtml
@@ -12,17 +12,30 @@
     text-overflow: ellipsis;
 }
 
-.form-search{
-
-}
 </style>
+
+<script>
+    function priceValue(){
+        var price = document.getElementById("price").innerHTML = document.getElementById("price-filter").value;
+    }
+</script>
 
 <h2>Список игр</h2>
 
 <form method="get" action="/Games/Index">
-    <div class="form-inline form-group">
-        <input type="text" class="form-control" name="search" />
-        <input type="submit" class="btn btn-default" value="Найти" />
+    <div class="row">
+        <div class="col-md-3">
+            <input type="text" class="form-control" name="search" />
+        </div>
+        <div class="col-md-1">
+            <input type="submit" class="btn btn-default" value="Найти" />
+        </div>
+        <div class="col-md-3">
+            <input type="range" min="0" max="100000" oninput="priceValue()" id="price-filter" name="searchPrice" /> 
+            <p id="price">0</p>
+        </div>
+    </div>
+    <div>
     </div>
 </form>
 
