--- a/GameShop/GameShop/Views/Customers/Index.cshtml
+++ b/GameShop/GameShop/Views/Customers/Index.cshtml
@@ -26,7 +26,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Email)
         </th>
-        <th></th>
+        <th>
+            @Html.DisplayNameFor(model => model.Role.Name)
+        </th>
     </tr>
 
 @foreach (var item in Model) {
@@ -45,6 +47,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Email)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Role.Name)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
