--- a/GameShop/GameShop/Views/Orders/Index.cshtml
+++ b/GameShop/GameShop/Views/Orders/Index.cshtml
@@ -14,6 +14,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Customer.FirstName)
         </th>
+        <th>
+        @Html.DisplayNameFor(model => model.Id)
+        </th>
         <th></th>
     </tr>
 
@@ -21,6 +24,9 @@
     <tr>
         <td>
             @Html.DisplayFor(modelItem => item.Customer.FirstName)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Id)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
