Сделал количество игр в корзине возле кнопки "Корзина". Метод AddToCart перенес в контроллер Orders. Удалил ненужные Методы и Вьюхи. Поправил представления Customers, Orders, GameComments (они нужны для Администратора). Начал панель администратора.

--- a/GameShop/GameShop/Views/Account/Delete.cshtml
+++ b/GameShop/GameShop/Views/Account/Delete.cshtml
@@ -56,7 +56,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Удалить" class="btn btn-default" /> |
             @Html.ActionLink("Вернуться в личный кабинет", "Profile")
         </div>
     }
