--- a/GameShop/GameShop/Views/GameComments/Create.cshtml
+++ b/GameShop/GameShop/Views/GameComments/Create.cshtml
@@ -32,16 +32,11 @@
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Отправить" class="btn btn-default" />
             </div>
         </div>
     </div>
 }
-
-<div>
-    @Html.ActionLink("Вернуться к игре", "Details")
-</div>
-
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
 }
