--- a/GameShop/GameShop/Views/GameComments/Delete.cshtml
+++ b/GameShop/GameShop/Views/GameComments/Delete.cshtml
@@ -1,31 +1,15 @@
 ﻿@model GameShop.Models.GameComment
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Удалить";
 }
 
-<h2>Delete</h2>
+<h2>Удалить</h2>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Вы уверены?</h3>
 <div>
-    <h4>GameComment</h4>
     <hr />
     <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Customer.FirstName)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Customer.FirstName)
-        </dd>
-
-        <dt>
-            @Html.DisplayNameFor(model => model.Game.Name)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.Game.Name)
-        </dd>
 
         <dt>
             @Html.DisplayNameFor(model => model.Rating)
@@ -49,7 +33,7 @@
         @Html.AntiForgeryToken()
 
         <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
+            <input type="submit" value="Удалить" class="btn btn-default" /> |
             @Html.ActionLink("Вернуться к игре", "Details", "Games", new { id = Model.GameId }, null)
         </div>
     }
