--- a/GameShop/GameShop/Views/GameComments/Index.cshtml
+++ b/GameShop/GameShop/Views/GameComments/Index.cshtml
@@ -1,18 +1,18 @@
 ﻿@model IEnumerable<GameShop.Models.GameComment>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Отзывы покупателей";
 }
 
-<h2>Index</h2>
+<h2>Отзывы покупателей</h2>
 
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Customer.FirstName)
+            @Html.DisplayNameFor(model => model.Customer.Login)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Game.Name)
+            @Html.DisplayNameFor(model => model.Game)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.Rating)
@@ -22,27 +22,51 @@
         </th>
         <th></th>
     </tr>
-
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Customer.FirstName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Game.Name)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Rating)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Comment)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
-
+    @{
+        var commentsCount = Model.Count();
+        var commentsPerPage = 10; // установка количества комментов на странице
+        var pagesCount = Convert.ToInt32(Math.Ceiling(commentsCount / (double)commentsPerPage));
+        int currentPage;
+        if (Int32.TryParse(Request.QueryString["page"], out currentPage)) //проверка номера страницы в URL
+        {
+            if (currentPage > pagesCount) { currentPage = pagesCount; }
+            else if (currentPage == 0) { currentPage = 1; }
+        }
+        else { currentPage = 1; } // если написали белиберду в URL ?page=
+        var startComment = currentPage * commentsPerPage - commentsPerPage;
+        for (var i = startComment; i < Math.Min(commentsCount, currentPage * commentsPerPage); i++)
+        {
+            <tr>
+                <td>
+                    @Html.DisplayFor(modelItem => Model.ElementAt(i).Customer.Login)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => Model.ElementAt(i).Game.Name)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => Model.ElementAt(i).Rating)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => Model.ElementAt(i).Comment)
+                </td>
+                <td>
+                    @Html.ActionLink("Редактировать", "Edit", new { id = Model.ElementAt(i).Id }) |
+                    @Html.ActionLink("Удалить", "Delete", new { id = Model.ElementAt(i).Id })
+                </td>
+            </tr>
+        }
+        <tr>
+            <td colspan="5">
+             <p style="font-size: 20px">
+             @for (var i = 1; i <= pagesCount; i++) //выводим кнопки страниц
+             {
+                if (i != currentPage)
+                { @Html.ActionLink(i.ToString(), "Index", new { page = i })}
+                else
+                { @currentPage }  <span>  </span>
+             }
+            </p>
+            </td>
+        </tr>
+    }
 </table>
