--- a/GameShop/GameShop/Views/Orders/Index.cshtml
+++ b/GameShop/GameShop/Views/Orders/Index.cshtml
@@ -1,39 +1,44 @@
 ﻿@model IEnumerable<GameShop.Models.Order>
 
 @{
-    ViewBag.Title = "Index";
+    ViewBag.Title = "Корзины покупателей";
 }
 
-<h2>Index</h2>
+<h2>Корзины покупателей</h2>
 
-<p>
-    @Html.ActionLink("Create New", "Create")
-</p>
 <table class="table">
     <tr>
         <th>
-            @Html.DisplayNameFor(model => model.Customer.FirstName)
+            @Html.DisplayNameFor(model => model.Customer.Login)
         </th>
         <th>
-        @Html.DisplayNameFor(model => model.Id)
+            @Html.DisplayNameFor(model => model.Id)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Current)
         </th>
         <th></th>
     </tr>
 
 @foreach (var item in Model) {
+    if (item.Current)
+    {
     <tr>
         <td>
-            @Html.DisplayFor(modelItem => item.Customer.FirstName)
+            @Html.DisplayFor(modelItem => item.Customer.Login)
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Id)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+            @Html.DisplayFor(modelItem => item.Current)
+        </td>
+        <td>
+            @Html.ActionLink("Подробнее", "Details", new { id = item.Id }) |
+            @Html.ActionLink("Удалить", "Delete", new { id = item.Id })
         </td>
     </tr>
+    }
 }
 
 </table>
